# ubiq

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Cargo.toml  Justfile  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
_docs/: app-description.md  draft-architecture.md  project-structure.md  scrachpad-features.md  simple-excalidraw-spec.md
_docs/design/: wireframe.excalidraw
_docs/design/_old/examples/: form.excalidraw  sample.excalidraw.yaml
_docs/design/output/: agent-manager.html  agent-manager.html.artifact.json  chat.html  chat.html.artifact.json  index.html  index.html.artifact.json  multi-agent.html  multi-agent.html.artifact.json  settings.html  settings.html.artifact.json  storybook.html  storybook.html.artifact.json  ubiq-multi-agent.html  ubiq-multi-agent.html.artifact.json
_docs/design/output/css/: ubiq.css
_docs/design/output/js/: ubiq.js
_docs/design/wireframe-opus/: 01-projects.excalidraw  01-projects.excalidraw.yaml  02-session.excalidraw  02-session.excalidraw.yaml  03-subagents.excalidraw  03-subagents.excalidraw.yaml  04-settings.excalidraw  04-settings.excalidraw.yaml  README.md  _merge.py  all-in-one.excalidraw  all-in-one.excalidraw.yaml
_docs/design/wireframe-v1/: index.html
_docs/examples/: form-pro.excalidraw  form-pro.excalidraw.yaml  form.excalidraw.yaml  sample.excalidraw
_tools/: excalidraw.py
crates/agent-manager/: AGENTS.md  Cargo.toml  README.md
crates/agent-manager/_docs/: README.md  am-as-library.md  architecture.md  cli.md  io-modes.md  open-points.md  overview.md  project-structure.md  registry.md  roadmap.md  test-plan.md  transition-plan.md
crates/agent-manager/_docs/harness/: antigravity.md  claude-code.md  codebuddy.md  codex.md  copilot.md  cursor.md  gemini.md  grok.md  harness-implementation-checklist.md  hermes.md  kimi.md  kiro.md  openclaw.md  opencode.md  pi.md  qoder.md  structure.md
crates/agent-manager/_docs/inbox/: configuration-draft.md
crates/agent-manager/_docs/old/: README.md  config-format.md
crates/agent-manager/_docs/reference/: multica.md
crates/agent-manager/_docs/test-runs/: 2026-07-10-grok.md  2026-07-10-subagent.md
crates/agent-manager/refs/: README.md
crates/agent-manager/src/: account.rs  cli.rs  config.rs  harness.rs  isolate.rs  lib.rs  main.rs  overlay.rs  profile.rs  project.rs  provision.rs  resolve.rs  run.rs  session.rs  settings.rs  source.rs  spec.rs  sync.rs  tui.rs
crates/agent-manager/src/cli/: account.rs  agent.rs  catalog.rs  mod.rs  profile.rs  run.rs  session.rs
crates/agent-manager/src/harness/: claude.rs  codex.rs  copilot.rs  grok.rs  mod.rs  opencode.rs
crates/agent-manager/src/io/: acp.rs  agui.rs  codex.rs  copilot.rs  jsonl.rs  mod.rs  model.rs  opencode.rs  passthrough.rs  structured.rs
crates/agent-manager/src/mcp/: mod.rs  server.rs
crates/agent-manager/src/registry/: fs.rs  import.rs  mod.rs
crates/agent-manager/tests/: codex_bridge.rs  fake-claude-streamjson.sh  fake-codex-appserver.sh  fake-harness.sh  fake-opencode-run.sh  jsonl_bridge.rs  opencode_bridge.rs  passthrough.rs
crates/agent-manager/tests/fixtures/catalog/: catalog.toml
crates/agent-manager/tests/fixtures/catalog-project/mcp/: postgres.json
crates/agent-manager/tests/fixtures/catalog-project/skills/deploy/: SKILL.md
crates/agent-manager/tests/fixtures/catalog/mcp/: docs.json  postgres.json
crates/agent-manager/tests/fixtures/catalog/skills/reviewer/: SKILL.md
crates/agent-manager/tests/fixtures/catalog/skills/web-designer/: SKILL.md
src/: bus.js  main.js
src-tauri/: Cargo.toml  agents.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  bus.rs  coordinator.rs  lib.rs  mcp_server.rs  messages.rs  orchestrator.rs
