[package]
name = "ubiq"
version = "0.1.0"
description = "Harness Multiplexer — A tmux-like application for hosting and orchestrating multiple interactive agent harnesses"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
toml = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
