[package]
name = "agent-manager"
version = "0.1.0"
edition = "2024"
description = "Unified configuration manager for AI agent harnesses (Claude Code, Codex, GitHub Copilot, opencode, ...)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdnmdn/agent-manager"

[lib]
name = "agent_manager"
path = "src/lib.rs"

[[bin]]
name = "agent-manager"
path = "src/main.rs"
required-features = ["frontend"]

[features]
# Default build (standalone tool) ships both front ends.
default = ["frontend"]
# The clap CLI + ratatui TUI. Disable (`default-features = false`) when
# embedding the library — e.g. the Ubiq Tauri app only needs the core
# config/harness/project/sync modules.
frontend = ["cli", "tui"]
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
# CLI (optional — `cli` feature)
clap = { version = "4", features = ["derive", "cargo", "wrap_help"], optional = true }

# TUI (optional — `tui` feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Errors
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"

# Filesystem / paths
directories = "5"
walkdir = "2"

# Logging (optional — used by the binary entry point)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3"
