[package]
name = "agent-manager"
version = "0.1.0"
edition = "2024"
description = "Unified configuration manager for AI agent harnesses (Claude Code, Codex, GitHub Copilot, opencode, ...)"
license-file = "../../LICENSE"
repository = "https://github.com/mdnmdn/agent-manager"

[lib]
name = "agent_manager"
path = "src/lib.rs"

[[bin]]
name = "agent-manager"
path = "src/main.rs"
required-features = ["frontend"]

[features]
# Default build (standalone tool) ships both front ends.
default = ["frontend"]
# The clap CLI + ratatui TUI. Disable (`default-features = false`) when
# embedding the library — e.g. the Ubiq Tauri app only needs the core
# config/harness/project/sync modules.
frontend = ["cli", "tui"]
# The clap CLI plus the runtime that launches a harness through a PTY.
cli = ["dep:clap", "dep:tracing", "dep:tracing-subscriber", "pty"]
tui = ["dep:ratatui", "dep:crossterm"]
# The passthrough runner: spawn the real harness in a PTY, forward the tty,
# resize on SIGWINCH, and propagate its exit code. Pulled in by `cli`; kept
# separate so the core (spec/resolve/registry/harness/provision) still builds
# with `--no-default-features` for lib mode.
pty = ["dep:portable-pty", "dep:crossterm", "dep:signal-hook"]

[dependencies]
# CLI (optional — `cli` feature)
clap = { version = "4", features = ["derive", "cargo", "wrap_help"], optional = true }

# TUI (optional — `tui` feature) / runner (optional — `pty` feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Runner PTY backend (optional — `pty` feature; already a workspace dep)
portable-pty = { version = "0.8", optional = true }
# SIGWINCH delivery for the runner (optional — `pty` feature). crossterm's
# resize events read from stdin, which conflicts with raw byte passthrough,
# so we use signal-hook to catch SIGWINCH directly instead.
signal-hook = { version = "0.3", optional = true }

# Errors
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1"

# Filesystem / paths
directories = "5"
walkdir = "2"

# Logging (optional — used by the binary entry point)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tempfile = "3"
